--- a/src/style.scss
+++ b/src/style.scss
@@ -171,3 +171,29 @@ body, html {
   height: 50px;
   width: 110px;
 }
+
+.SignInForms{
+  display: flex;
+  flex-direction: column;
+}
+
+.SignInForm{
+  width: 400px;
+  margin-top: 40px;
+  flex-direction: column;
+}
+
+.SignInButton{
+  width: 400px;
+  height: 40px;
+  margin-top: 20px;
+}
+
+.SignOutButton{
+  position: absolute;
+  width: 80px;
+  height: 40px;
+  top: 20px;
+  right: 0px;
+  background-color: red;
+}
